# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

*portage-2.0.51_pre15 (03 Aug 2003): Fixes and Public Readiness

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected 
  typo, trying to remove .backup_metadata.dtd rather then metadata.dtd.

  03 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_dep.py: Changing
  from dep_opconvert to use_reduce introduced a bug due to how OR'd lists are
  managed by the remaining dep handling functions -- Fixed by emulating the
  format in use_reduce.

  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman, pym/portage.py:
  Added local caching of metadata.dtd, to prevent flaky connections from 
  flagging a packages metadata.xml as invalid due to xmllint failing to fetch 
  metadata.dtd.  Simplified version of patch in (#57210).

  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh, 
  pym/portage.py:  Added support for src'ing a profile bashrc.  Fex, if
  /etc/make.profile/profile.bashrc exists, it is sourced prior to ebuild.sh
  defining any of it's functions.  (#58415).

  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge-webrsync: General
  cleanup; uses the make.conf defined FETCHCOMMAND for fetching (fixing #57887),
  runs emerge metadata after a successful sync also.

*portage-2.0.51_pre14 (02 Aug 2003): Fixes and Public Readiness

  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> do*: Added exit calls
  on failures and changed the install to use short options for BSD compat.
  
  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: unset
  GLOBIGNORE added. Echo out the confingure command from econf. Moved the